# rust-keylogger

./: Cargo.toml  README.md
assets/: win_payload.scr
config/: webhook.url
src/: main.rs
